@@ -14,12 +14,12 @@
       <description lang="en" title="Arbitrary Precision Floating Point Math Library" >
         <paragraph>
           The MPFR library is a C library for multiple-precision floating-point
-          computations with correct rounding. The main goal of MPFR is to
+          computations with correct rounding.  The main goal of MPFR is to
           provide a library for multiple-precision floating-point computation
-          which is both efficient and has a well-defined semantics. It copies
+          which is both efficient and has a well-defined semantics.  It copies
           the good ideas from the ANSI/IEEE-754 standard for double-precision
-          floating-point arithmetic (53-bit mantissa). MPFR is based on the GMP
-          multiple-precision library.
+          floating-point arithmetic (53-bit mantissa).  MPFR is based on the
+          GMP multiple-precision library.
         </paragraph>
         <paragraph>
           The mingw32-mpfr package provides the documentation for the mpfr
@@ -32,25 +32,33 @@
       <licence tarname="mpfr-%-mingw32-lic.tar.lzma" />
 
       <component class="dev">
-        <release tarname="mpfr-3.1.2-2-mingw32-dev.tar.lzma" >
+        <release tarname="mpfr-3.1.5-1-mingw32-dev.tar.xz">
           <requires eq="mingw32-libmpfr-%-mingw32-dll-4.tar" />
-          <requires eq="gmp-5.1.2-1-mingw32-dev.tar.lzma" />
         </release>
-        <release tarname="mpfr-2.4.1-1-mingw32-dev.tar.lzma" >
+        <release tarname="mpfr-3.1.2-2-mingw32-dev.tar.lzma">
+          <requires eq="mingw32-libmpfr-%-mingw32-dll-4.tar" />
+        </release>
+        <release tarname="mpfr-2.4.1-1-mingw32-dev.tar.lzma">
           <requires eq="mingw32-libmpfr-%-mingw32-dll-1.tar" />
         </release>
+        <requires eq="gmp-*-mingw32-dev.tar" />
       </component>
 
       <component class="doc">
+        <release tarname="mpfr-3.1.5-1-mingw32-doc.tar.xz" />
         <release tarname="mpfr-3.1.2-2-mingw32-doc.tar.lzma" />
         <release tarname="mpfr-2.4.1-1-mingw32-doc.tar.lzma" />
       </component>
 
+      <component class="info">
+        <release tarname="mpfr-3.1.5-1-mingw32-info.tar.xz" />
+      </component>
+
       <component class="lic">
+        <release tarname="mpfr-3.1.5-1-mingw32-lic.tar.xz" />
         <release tarname="mpfr-3.1.2-2-mingw32-lic.tar.lzma" />
         <release tarname="mpfr-2.4.1-1-mingw32-lic.tar.lzma" />
       </component>
-
     </package>
 
     <package name="mingw32-libmpfr" alias="libmpfr">
@@ -58,17 +66,17 @@
       <description lang="en" title="Arbitrary Precision Floating Point Math Library" >
         <paragraph>
           The MPFR library is a C library for multiple-precision floating-point
-          computations with correct rounding. The main goal of MPFR is to
+          computations with correct rounding.  The main goal of MPFR is to
           provide a library for multiple-precision floating-point computation
-          which is both efficient and has a well-defined semantics. It copies
+          which is both efficient and has a well-defined semantics.  It copies
           the good ideas from the ANSI/IEEE-754 standard for double-precision
-          floating-point arithmetic (53-bit mantissa). MPFR is based on the GMP
-          multiple-precision library.
+          floating-point arithmetic (53-bit mantissa).  MPFR is based on the
+          GMP multiple-precision library.
         </paragraph>
         <paragraph>
           The mingw32-libmpfr package provides the runtime library.  The
           associated mingw32-mpfr package provides the documentation for the
-          mpfr library, as well as the related development files.
+          MPFR library, as well as the related development files.
         </paragraph>
         <paragraph>
           This is a required component of the MinGW Compiler Suite.
@@ -79,16 +87,17 @@
       <licence tarname="mpfr-%-mingw32-lic.tar.lzma" />
 
       <component class="dll">
+        <release tarname="libmpfr-3.1.5-1-mingw32-dll-4.tar.xz" />
         <release tarname="libmpfr-3.1.2-2-mingw32-dll-4.tar" >
           <download tarname="mpfr-3.1.2-2-mingw32-dll.tar.lzma" />
-          <requires eq="mingw32-libgmp-*-mingw32-dll-10.tar" />
         </release>
-        <release tarname="libmpfr-2.4.1-1-mingw32-dll-1.tar.lzma" >
-          <requires eq="mingw32-libgmp-*-mingw32-dll-10.tar" />
-        </release>
+        <release tarname="libmpfr-2.4.1-1-mingw32-dll-1.tar.lzma" />
+        <requires eq="mingw32-libgmp-*-mingw32-dll-10.tar" />
       </component>
     </package>
 
   </package-collection>
 </software-distribution>
-<!-- vim: set nocompatible expandtab fileformat=unix textwidth=80 tabstop=2 shiftwidth=2: -->
+
+<!-- vim: set textwidth=80 tabstop=2 shiftwidth=2 expandtab: -->
+<!-- vim: set fileformat=unix nocompatible: -->
