@@ -1,5 +1,13 @@
 2017-07-16  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
+	Upgrade mingw32-mpfr package to version 3.1.5.
+
+	* mingw32/mingw32-mpfr.xml: Add new release specifications.
+	(info): New component package; add reference and specification.
+	* common/issue.log mingw32/issue.log: Update accordingly.
+
+2017-07-16  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
 	Upgrade mingw32-gmp package to version 6.1.2.
 
 	* mingw32/mingw32-gmp.xml: Add new release specifications.
